--- a/pkg/pages/recipe-page.templ
+++ b/pkg/pages/recipe-page.templ
@@ -1,10 +1,14 @@
 package pages
 
 import (
+    "time"
     "github.com/jonasmh/recipetracker/pkg/models"
+    "github.com/jonasmh/recipetracker/pkg/database"
 )
 
-templ RecipePage(recipe models.Recipe) {
+templ RecipePage(recipe models.Recipe, db *database.RecipeDatabase) {
+    {{ history, _ := db.GetRecipeHistory(recipe.Id) }}
+
     <div>
         <h1>{ recipe.Title }</h1>
         <p>{ recipe.Description }</p>
@@ -15,6 +19,35 @@ templ RecipePage(recipe models.Recipe) {
         </ul>
         <h2>Instructions</h2>
         <p>{ recipe.Description }</p>
+
+        <h2>History</h2>
+        <ul>
+            for _, entry := range history {
+                <li>{ entry.Committer.When.Format(time.RFC3339) } - { entry.Message }</li>
+            }
+        </ul>
     </div>
     
+}
+
+templ CreateOrEditRecipePage(recipe models.Recipe) {
+    <div>
+        <h1>Add / update recipe</h1>
+        <form method="POST" action="/recipes/{ recipe.ID }">
+            <label for="title">Title</label>
+            <input type="text" id="title" name="title" value="{ recipe.Title }" required>
+
+            <label for="description">Description</label>
+            <textarea id="description" name="description">{ recipe.Description }</textarea>
+
+            <h2>Ingredients</h2>
+            <ul>
+                for _, ingredient := range recipe.Ingredients {
+                    <li>{ ingredient.Name } - { ingredient.Quantity }</li>
+                }
+            </ul>
+
+            <button type="submit">Add / update recipe</button>
+        </form>
+    </div>
 }
