--- a/pkg/pages/recipe-pages.templ
+++ b/pkg/pages/recipe-pages.templ
@@ -1,17 +1,19 @@
 package pages
 
-import (
-	"github.com/jonasmh/recipetracker/pkg/models"
-)
-
+import "github.com/jonasmh/recipetracker/pkg/models"
 
 templ RecipesPage(recipes []models.Recipe) {
 	<div>
-		<h1>Recipes</h1>
-		<ul>
-			for _, recipe := range recipes {
-				<li><a href={templ.URL("/recipe/" + recipe.Id)}>{ recipe.Title }</a> </li>
-			}
-		</ul>
+		<div>
+			<h1>Recipes</h1>
+			<ul>
+				for _, recipe := range recipes {
+					<li><a href={ templ.URL("/recipes/" + recipe.Id) }>{ recipe.Title }</a> </li>
+				}
+			</ul>
+		</div>
+		<div>
+			@CreateOrEditRecipePage(models.Recipe{})
+		</div>
 	</div>
 }
