--- a/pkg/pages/main-layout.templ
+++ b/pkg/pages/main-layout.templ
@@ -1,6 +1,7 @@
 package pages
 
 templ MainLayout() {
+	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<link rel="stylesheet" href="/assets/styles.css?test=2"/>
 	<div class="dark min-h-screen bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100">
 		<header class="bg-gray-200 dark:bg-gray-800 p-4 shadow-md">
